--- a/Ls7-Typography/Nutrition-Facts.html
+++ b/Ls7-Typography/Nutrition-Facts.html
@@ -57,7 +57,7 @@
                 <p><span >Potassium 235mg</span><span>60%</span></p>
                 <div class="divider medium"></div>
             </div>
-            <div class="italic small-text">
+            <div class="note">
                 <p>* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily diet. 2,000 calories a day is used for general nutrition advice.</p>
             </div>
             
